Après remplacement des Enum par des constantes, car trop difficiles à gérer.

--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -34,7 +34,7 @@
                 <td>{{ utilisateur.password }}</td>
                 <td>{{ utilisateur.prenom }}</td>
                 <td>{{ utilisateur.nom }}</td>
-                {# <td>{{ utilisateur.genre }}</td> #}
+                <td>{{ utilisateur.genre }}</td>
                 <td>{{ utilisateur.telephone }}</td>
                 <td>{{ utilisateur.rueEtNumero }}</td>
                 <td>{{ utilisateur.codePostal }}</td>
