--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,9 @@
         {% endblock %}
     </head>
     <body>
+        <header class="d-flex justify-content-center mt-3">
+            <img src="{{ asset('images/logo.png') }}" width="80px" alt="Logo non trouvé.">
+        </header>
         <div class="container">
             {% block body %}{% endblock %}
         </div>
