--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Utilisateur index</h1>
 
-    <table class="table">
+    <table class="table clo_table">
         <thead>
             <tr>
                 <th>Id</th>
