Ajout pénible de mediasDeContact; surtout à propos de register.

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,10 +17,12 @@
         {{ form_row(registrationForm.genre) }}
         {{ form_row(registrationForm.roles) }}
         {{ form_row(registrationForm.courriel) }}
+        {{ form_row(registrationForm.mediasDeContact) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
-        {{ form_row(registrationForm.telephone) }}
+        {{ form_row(registrationForm.telephoneFixe) }}
+        {{ form_row(registrationForm.telephoneMobile) }}
         {{ form_row(registrationForm.rueEtNumero) }}
         {{ form_row(registrationForm.codePostal) }}
         {{ form_row(registrationForm.ville) }}
