--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="d-flex flex-column align-items-center mt-3 mb-5">
-            <img src="{{ asset('images/logo.png') }}" width="80px" alt="Logo non trouvé.">
+            <img src="{{ asset('assets/images/logo.png') }}" width="80px" alt="Logo CLO non trouvé.">  
             <div class="t-3">Compte client</div>
         </header>
         <div class="container">
