--- a/templates/BackEnd/Administrateur/voirUnEmploye.html.twig
+++ b/templates/BackEnd/Administrateur/voirUnEmploye.html.twig
@@ -28,5 +28,5 @@
     </div>
 </div>
 
-<a href="{{ path('app_liste_des_employes') }}" class="btn btn-outline-light btn-sm mt-4">&nbsp;Retour&nbsp;</a>
+<a href="{{ path('app_liste_des_employes') }}" class="btn btn-outline-light btn-sm mt-4">Retour</a>
 {% endblock %}
