--- a/templates/BackEnd/Administrateur/EditerUnEmploye.html.twig
+++ b/templates/BackEnd/Administrateur/EditerUnEmploye.html.twig
@@ -9,7 +9,7 @@
     </a>
 </div>
 
-{# {{ form_start(form) }} #}
+{{ form_start(form) }}
 
     {# {{ form_widget(form) }} #}
 
@@ -41,15 +41,24 @@
   </div>
 
   <div class="p-2">
-    {{ form_label(form.telephoneFixe) }}
-    {{ form_widget(form.telephoneFixe) }}
-    {{ form_errors(form.telephoneFixe) }}
-  </div>
-  
+        <div style="grid-template-columns: 1fr 1fr;" class="d-grid gap-3">
+            <div class="p-2">
+                {{ form_label(form.telephoneFixe) }}
+                {{ form_widget(form.telephoneFixe) }}
+                {{ form_errors(form.telephoneFixe) }}
+            </div>
+            <div class="p-2">
+                {{ form_label(form.telephoneMobile) }}
+                {{ form_widget(form.telephoneMobile) }}
+                {{ form_errors(form.telephoneMobile) }}
+            </div>
+        </div>
+  </div>  
+
   <div class="p-2">
-    {{ form_label(form.telephoneMobile) }}
-    {{ form_widget(form.telephoneMobile) }}
-    {{ form_errors(form.telephoneMobile) }}
+    {{ form_label(form.courriel) }}
+    {{ form_widget(form.courriel) }}
+    {{ form_errors(form.courriel) }}
   </div>
 
   <div class="p-2">
@@ -82,17 +91,47 @@
         </div>
   </div>
 
-  <div class="grid-span-2">
-    {{ form_label(form.rueEtNumero) }}
-    {{ form_widget(form.rueEtNumero) }}
-    {{ form_errors(form.rueEtNumero) }}
+</div>
+
+<div class="p-2">
+{{ form_label(form.rueEtNumero) }}
+{{ form_widget(form.rueEtNumero) }}
+{{ form_errors(form.rueEtNumero) }}
+</div>
+
+<div style="grid-template-columns: 1fr 1fr;" class="d-grid gap-3">
+
+  <div class="p-2">
+    {{ form_label(form.codePostal) }}
+    {{ form_widget(form.codePostal) }}
+    {{ form_errors(form.codePostal) }}
+  </div>
+
+  <div class="p-2">
+    {{ form_label(form.ville) }}
+    {{ form_widget(form.ville) }}
+    {{ form_errors(form.ville) }}
+  </div>
+
+  <div class="p-2">
+    {{ form_label(form.societe) }}
+    {{ form_widget(form.societe) }}
+    {{ form_errors(form.societe) }}
+  </div>
+
+  <div class="p-2">
+    {{ form_label(form.roles) }}
+    {{ form_widget(form.roles) }}
+    {{ form_errors(form.roles) }}
   </div>
 
 </div>
 
     {# {{ form_row(form.genre) }} #}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{# {{ form_end(form) }} #}
+    {# <button class="btn">{{ button_label|default('Save') }}</button> #}
+    {# <button class="btn">Save</button> #}
+    {{ form_row( form.submit ) }}
+{{ form_end(form) }}
 
-<a href="{{ app.request.headers.get('referer') }}" class="btn btn-outline-light btn-sm mt-4">&nbsp;Retour&nbsp;</a>
+<a href="{{ app.request.headers.get('referer') }}" class="btn btn-outline-light btn-sm mt-4">Abandonner</a>
 {% endblock %}
