--- a/templates/BackEnd/Administrateur/listeDesEmployes.html.twig
+++ b/templates/BackEnd/Administrateur/listeDesEmployes.html.twig
@@ -29,7 +29,7 @@
 
 {% block body %}
 
-<a href="{{ path('app_ajouter_un_employe') }}" class="btn btn-outline-light btn-sm mt-4">Ajouter un employé</a>
+<a href="{{ path('app_ajouter_un_employe') }}" class="btn btn-outline-light btn-sm mb-4">Ajouter un employé</a>
 
 <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
     <a href="{{ path('app_accueil_administrateur') }}">
