--- a/templates/BackEnd/listeDesComptesClients.html.twig
+++ b/templates/BackEnd/listeDesComptesClients.html.twig
@@ -29,13 +29,14 @@
 
 {% block body %}
 
-<a href="{{ path('app_ajouter_un_employe') }}" class="btn btn-outline-light btn-sm mt-4">Ajouter un employé</a>
-
 <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
     <a href="{{ path('app_accueil_administrateur') }}">
         <img class="icon-page-precedente" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
     </a>
 </div>
+
+{# <a href="{{ path('app_ajouter_un_compte_client') }}" class="btn btn-outline-light btn-sm mt-4">Ajouter un employé</a> #}
+<a href="#" class="btn btn-outline-light btn-sm mb-4">Ajouter un compte client</a>
 
 <div id="table-desktop" class="d-none d-md-block">
     <table id="employes" class="table table-striped">
@@ -49,16 +50,17 @@
             </tr>
         </thead>
         <tbody>
-            {% for e in listeDesEmployes %}
+            {% for cc in listeDesComptesClients %}
                 <tr>
-                    <td>{{e.prenom}}</td>
-                    <td>{{e.nom}}</td>
-                    <td>{% for r in e.roles %}{{r|replace({'ROLE_': ''})|replace({'_':' '})|lower|capitalize}}{% if not(loop.last) %} , {% endif %}{% endfor %}</td>
-                    <td>{{e.Courriel}}</td>
+                    <td>{{cc.client.prenom}}</td>
+                    <td>{{cc.client.nom}}</td>
+                    <td>{{cc.client.societe}}</td>
+                    <td>{{cc.nbContrats}}</td>
                     <td class="d-flex justify-content-between">
-                        <a href="{{ path('app_voir_un_employe' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50 me-2">&nbsp;Voir&nbsp;</a>
-                        <a href="{{ path('app_editer_un_employe' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50">Editer</a>
-
+                        {# <a href="{{ path('app_liste_des_contrats' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50 me-2">&nbsp;Voir&nbsp;</a>
+                        <a href="{{ path('app_editer_un_compte_client' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50">Editer</a> #}
+                        <a href="{{ path('app_liste_des_contrats' , {id : cc.client.id , }) }}" class="btn btn-outline-light btn-sm w-50 me-2">&nbsp;Voir&nbsp;</a>
+                        <a href="#" class="btn btn-outline-light btn-sm w-50">Editer</a>
                     </td>
                 </tr>
             {% endfor %}
@@ -66,7 +68,7 @@
     </table>
 </div>
 
-<div id="table-mobile" class="d-block d-md-none">
+{# <div id="table-mobile" class="d-block d-md-none">
     {% for e in listeDesEmployes %}
         <div class="d-flex justify-content-start mb-3">
             <div class="w-75">
@@ -80,7 +82,7 @@
             </div>
         </div>
     {% endfor %}
-</div>
+</div> #}
 
 <a href="{{ path('app_accueil_administrateur') }}" class="btn btn-outline-light btn-sm mt-4">Retour</a>
 
