--- a/templates/FrontEnd/EditerUnCompteClient.html.twig
+++ b/templates/FrontEnd/EditerUnCompteClient.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% if edition == true %}Editer{% else %}Ajouter{% endif %} un employé{% endblock %}
+{% block title %}{% if edition == true %}Editer{% else %}Ajouter{% endif %} un client{% endblock %}
 
 {% block body %}
 <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
@@ -131,6 +131,7 @@
     {# <button class="btn">{{ button_label|default('Save') }}</button> #}
     {# <button class="btn">Save</button> #}
     {{ form_row( form.submit ) }}
+    
 {{ form_end(form) }}
 
 <a href="{{ app.request.headers.get('referer') }}" class="btn btn-outline-light btn-sm mt-4">Abandonner</a>
