Une première version acceptable de voir et editer les contrats d'un client.

--- a/templates/FrontEnd/EditerUnContrat.html.twig
+++ b/templates/FrontEnd/EditerUnContrat.html.twig
@@ -72,6 +72,7 @@
 
 </div>
 
+{% if edition == true %}
 <div style="" class="p-2">
 
     {{ form_label(form.nomContratActuel) }}
@@ -79,15 +80,16 @@
     {{ form_errors(form.nomContratActuel) }}
 
 </div>
+{% endif %}
 
-{% if form.nomContratActuel %}
+{% if pathContratActuel is defined and pathContratActuel is not null %}
     <div class="alert alert-warning mt-2" role="alert">
-        ⚠️ Un fichier est déjà enregistré (<strong> form.nomContratActuel </strong>).<br>
-        En choisissant un nouveau fichier ci-dessous, celui-ci <strong>remplacera</strong> l'ancien lors de la validation du formulaire.
+        ⚠️ Un contrat est déjà enregistré (<strong> {{ pathContratActuel|split('/')|last }} </strong>).<br>
+        En choisissant un nouveau contrat ci-dessous, celui-ci <strong>remplacera</strong> l'ancien lors de la validation du formulaire.
     </div>
     <p>
         📄 <a href="{{ asset(pathContratActuel|default('')) }}" target="_blank">
-            Télécharger le fichier existant
+            Télécharger le contrat actuel
         </a>
     </p>
 {% endif %}
