--- a/templates/FrontEnd/voirUnContrat.html.twig
+++ b/templates/FrontEnd/voirUnContrat.html.twig
@@ -19,7 +19,7 @@
 
 {% block body %}
 <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
-    <a href="{{ path('app_liste_des_contrats' , { id : client.id }) }}">
+    <a href="{{ path('app_liste_des_contrats' , { id : client.id , pathContratDansPublic: asset('storage/' ~ contrat.cheminFichier) }) }}">
         <img class="icon-page-precedente" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
     </a>
 </div>
@@ -46,15 +46,21 @@
         </div>
     </div>
 
+    <strong> {{ contrat.cheminFichier|split('/')|last }} </strong><br>
+
     <div id="pdf-textlayer-container"></div>
 
+    <a href="{{ path('app_liste_des_contrats', {
+        id: client.id,
+        pathContratDansPublic: asset('storage/' ~ contrat.cheminFichier)
+    }) }}" class="btn btn-outline-light btn-sm mt-4">Retour</a>
+
     <div>
-        <button id="prev">Previous</button>
-        <button id="next">Next</button>
+        <button id="prev" class='btn btn-outline-light btn-sm mb-1'>Précédente</button>
+        <button id="next" class='btn btn-outline-light btn-sm mb-1'>Suivante</button>
         &nbsp; &nbsp;
         <span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
     </div>
-
     <canvas id="the-canvas"></canvas>
 
     <script type="module">
@@ -163,5 +169,4 @@
 
 </div>
 
-<a href="{{ path('app_liste_des_contrats' , { id : client.id }) }}" class="btn btn-outline-light btn-sm mt-4">Retour</a>
 {% endblock %}
