--- a/templates/BackEnd/listeDesComptesClients.html.twig
+++ b/templates/BackEnd/listeDesComptesClients.html.twig
@@ -59,7 +59,7 @@
                     <td class="d-flex justify-content-between">
                         {# <a href="{{ path('app_liste_des_contrats' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50 me-2">&nbsp;Voir&nbsp;</a>
                         <a href="{{ path('app_editer_un_compte_client' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50">Editer</a> #}
-                        <a href="{{ path('app_liste_des_contrats' , {id : cc.client.id }) }}" class="btn btn-outline-light btn-sm w-50 me-2">&nbsp;Voir&nbsp;</a>
+                        <a href="{{ path('app_liste_des_contrats' , {id : cc.client.id , pathContratDansPublic : '' }) }}" class="btn btn-outline-light btn-sm w-50 me-2">&nbsp;Voir&nbsp;</a>
                         <a href="{{ path( 'app_editer_un_compte_client' , { id : cc.client.id }) }}" class="btn btn-outline-light btn-sm w-50">Editer</a>
                     </td>
                 </tr>
